*** TreatJS 1.3.1 (PoC)
* Reflection Contracts

*** TreatJS 1.2.17 (PoC)
* Runtime optimization on Callback Structure
* New TreatJS Debugger

*** TreatJS 1.2.16 (PoC)
* Runtime optimization