@@ -20,6 +20,10 @@
 
 * Exclude Print Output
 
+* New Style of Function decompilation
+** Real Dynamic handler
+
+
 
 ## Minor Tasks ##
 
